--- a/Server/package.json
+++ b/Server/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "echo \"No build step required for backend\" && exit 0"
   },
   "keywords": [],
   "author": "",
