--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,9 @@ services:
   - type: web
     name: goaltips-api
     env: node
-    buildCommand: npm install && npm run install:server
-    startCommand: npm run server
+    rootDir: Server
+    buildCommand: npm install
+    startCommand: node server.js
     envVars:
       - key: PORT
         value: 5000
